# pydantic-prompter

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  annotation_parser.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: publish-docs.yml  publish-to-pypi.yml  tests.yml
ai_services/: index.html
docs/: ai_services.md  example1.py  index.md  prompt_templates.md  supported_models.md
examples/: anthropic_custom.jinja  bedrock.py  bedrock_custom_prompt.py  cohere.py  history_injection.py  history_injection_jinja.py  rank_movies.py  simple_typings.py  use_logging.py
prompt_templates/: index.html
search/: search_index.json
src/pydantic_prompter/: __init__.py  annotation_parser.py  common.py  exceptions.py  llm_provider.py  prompter.py  settings.py
src/pydantic_prompter/llm_providers/: __init__.py  base.py  bedrock_anthropic.py  bedrock_base.py  bedrock_cohere.py  bedrock_llama2.py  cohere.py  model.py  openai.py  provider.py
src/pydantic_prompter/prompt_templates/: anthropic.jinja  llama2.jinja
src/pydantic_prompter/prompt_templates/pydantic/: anthropic.jinja  cohere.jinja  llama2.jinja
src/pydantic_prompter/prompt_templates/simple/: anthropic.jinja  cohere.jinja  llama2.jinja
src/pydatic_prompter/: __init__.py  exceptions.py  prompter.py
supported_models/: index.html
tests/: bedrock_tests.py  data_for_tests.py  gpt_tests.py  live_tests.py  prompts_for_tests.py  sanity.py  settings.py
