[project]
name = "pydantic-prompter"
version = "0.1.32"
description = "Pydantic Prompter is a lightweight utility designed to facilitate the construction of prompts using YAML and generate Pydantic objects as outputs."
authors = [
    { name = "Ofer Helman", email = "helmanofer@gmail.com" },
]

readme = "./README.md"

dependencies = [
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "retry>=0.9.2",
    "pydantic>2.0.0",
    "pydantic-settings>=2.1.0",
    "fix-busted-json>=0.0.18",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
openai = [
    "openai>=1.6.1",
]
bedrock = [
    "botocore>=1.34.11",
    "boto3>=1.34.11",
    "awscli>=1.32.11",
]
chere = [
    "cohere>=4.46",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = [
    "tests/*",
]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(filename)s %(lineno)d - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
markers = [
    "live",
    "serial",
]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dotenv==1.0.0",
]
lint = [
    "flake8>=6.1.0",
    "black>=23.7.0",
    "yamllint>=1.32.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.5",
]
dev = [
    "tox-pdm>=0.6.1",
]

[project.urls]
Source = "https://github.com/helmanofer/pydantic-prompter"
Docs = "https://helmanofer.github.io/pydantic-prompter/"
